--- a/文档/技术栈.md
+++ b/文档/技术栈.md
@@ -1,6 +1,30 @@
 ## 技术栈 ##
-1.java基础：
+#### 1.java基础： ####
 	
-1. JAVA IO
+1. JAVA IO NIO :网络编程+多线程
 	实战：文件下载上传等
-2. NIO :网络编程+多线程
+2. java并发
+3. java集合（自己实现一个hashmap--一定要）
+4. java线程
+
+#### 2.数据库 ####
+
+1. mysql数据库--数据库调优（实战？）
+2. redis（秒杀系统？）
+
+#### java框架 ####
+
+1. spring框架及源码阅读
+2. springboot运用
+3. mybatis运用
+4. dubbo？
+5. 扩展资料：1.https://www.zhihu.com/people/cross-45-82（问题）
+6. 扩展：https://blog.csdn.net/yaomingyang/category_10394697.html（spring源码）
+
+#### 中间件 ####
+1. 缓存
+2. 消息队列（rabbitmq kafka）
+
+#### 技术扩展 ####
+1. java设计模式
+
