登录及权限思路明确

--- a/文档/技术文档.md
+++ b/文档/技术文档.md
@@ -13,6 +13,7 @@
 - 雪花算法原理-缺陷 如何优化
 - 应用市场用的是本地服务器 自己的项目尝试利用FastDFS搭建文件服务器
 - 密码加密
+- 延迟队列实现自动删除订单：[https://zhuanlan.zhihu.com/p/266156267?utm_source=wechat_session&utm_medium=social&utm_oi=821738364607791104](https://zhuanlan.zhihu.com/p/266156267?utm_source=wechat_session&utm_medium=social&utm_oi=821738364607791104 "延迟队列")
 
 
 ###  衍生出的技术总结 ###
