--- a/文档/技术文档.md
+++ b/文档/技术文档.md
@@ -10,9 +10,11 @@
 
 - 权限：如果统一处理权限，而不用自己在每个页面处理，仿照springsecurity在filter中，通过指定路径来确定权限
 - 如何做到一人多出在线功能，或者不允许多人在线登录功能
-- 雪花算法原理-缺陷 如何优化
+- 雪花算法原理-缺陷 如何优化--部分
+- 全局异常处理--部分
+- 日志记录
 - 应用市场用的是本地服务器 自己的项目尝试利用FastDFS搭建文件服务器
-- 密码加密
+- 密码加密--部分
 - 延迟队列实现自动删除订单：[https://zhuanlan.zhihu.com/p/266156267?utm_source=wechat_session&utm_medium=social&utm_oi=821738364607791104](https://zhuanlan.zhihu.com/p/266156267?utm_source=wechat_session&utm_medium=social&utm_oi=821738364607791104 "延迟队列")
 
 
@@ -26,3 +28,5 @@
 - **hash+hashmap(建议另外写一个md)**
 	- hash:https://v.youku.com/v_show/id_XNDAyNTA3NTAwOA==.html
 	- hashmap:https://www.cnblogs.com/xiaoxi/p/7233201.html + https://www.cnblogs.com/chengxiao/p/6059914.html
+
+- **springboot日志记录**
