--- a/文档/技术文档.md
+++ b/文档/技术文档.md
@@ -6,11 +6,17 @@
 		/sys/**，立即有权限访问（http://localhost:8888/sys/sysUser/get/1）（参考了springsecurity）
 		用户关联角色表：T_STORE_UserRefRole：
 
+### 业务功能点 ###
+- 登录--权限把控
+- 订单秒杀
+- 类似devlpos系统，需求bug工作流
+
+
 ### 所用的技术点 ###
 
 - 权限：如果统一处理权限，而不用自己在每个页面处理，仿照springsecurity在filter中，通过指定路径来确定权限
 - 如何做到一人多出在线功能，或者不允许多人在线登录功能
-- 雪花算法原理-缺陷 如何优化--部分
+- 雪花算法原理-缺陷 如何优化（参考美团算法）
 - 全局异常处理--部分
 - 日志记录
 - 应用市场用的是本地服务器 自己的项目尝试利用FastDFS搭建文件服务器
