初步完成 明天完成注册功能

--- a/文档/技术文档.md
+++ b/文档/技术文档.md
@@ -12,12 +12,15 @@
 - 类似devlpos系统，需求bug工作流
 
 
+
+
 ### 所用的技术点 ###
 
+- 热部署：https://blog.csdn.net/chachapaofan/article/details/88697452
 - 权限：如果统一处理权限，而不用自己在每个页面处理，仿照springsecurity在filter中，通过指定路径来确定权限
 - 如何做到一人多出在线功能，或者不允许多人在线登录功能
 - 雪花算法原理-缺陷 如何优化（参考美团算法）
-- 全局异常处理--部分
+- 全局异常处理
 - 日志记录
 - 应用市场用的是本地服务器 自己的项目尝试利用FastDFS搭建文件服务器
 - 密码加密--部分
