--- a/文档/技术栈.md
+++ b/文档/技术栈.md
@@ -1,11 +1,13 @@
 ## 技术栈 ##
 #### 1.java基础： ####
 	
-1. JAVA IO NIO :网络编程+多线程
+1. java多线程
 	实战：文件下载上传等
-2. java并发
-3. java集合（自己实现一个hashmap--一定要）
-4. java线程
+2. java集合（自己实现一个hashmap--一定要）
+3. java并发
+4. JAVA IO NIO :网络编程+多线程
+5. 网络编程
+6. 注解反射
 
 #### 2.数据库 ####
 
