解决拦截器问题

--- a/文档/技术栈.md
+++ b/文档/技术栈.md
@@ -1,4 +1,7 @@
 ## 技术栈 ##
+
+## 八股文：https://blog.csdn.net/qq_23696693/article/details/108406217 ##
+
 #### 1.java基础： ####
 	
 1. java多线程
@@ -8,11 +11,36 @@
 4. JAVA IO NIO :网络编程+多线程
 5. 网络编程
 6. 注解反射
+7. 反射
+8. JDK 动态代理
+
+#### Java 集合框架 ####
+1. List（线性结构）
+2. Map（K，V 对）
+3. Set（唯一值）
+
+#### 多线程 ####
+
+
+#### java虚拟机 ####
+
+#### MySQL （Inno DB） ####
+
+#### Spring 相关 ####
+
+#### 计算机网络 ####
+
+#### MQ 消息队列 ####
+
+#### Redis ####
+
+#### Nginx ####
 
 #### 2.数据库 ####
 
 1. mysql数据库--数据库调优（实战？）
 2. redis（秒杀系统？）
+
 
 #### java框架 ####
 
