登录前端交互

--- a/文档/技术栈.md
+++ b/文档/技术栈.md
@@ -57,4 +57,5 @@
 
 #### 技术扩展 ####
 1. java设计模式
+- 策略模式 ，基本设计：[https://www.jianshu.com/p/7cef2d6b8579?utm_campaign=haruki&utm_content=note&utm_medium=seo_notes&utm_source=recommendation](https://www.jianshu.com/p/7cef2d6b8579?utm_campaign=haruki&utm_content=note&utm_medium=seo_notes&utm_source=recommendation "基本设计")  [https://www.jianshu.com/p/3598aeac83e4](https://www.jianshu.com/p/3598aeac83e4 "优化")  [https://www.jianshu.com/p/80dba5583b9e](https://www.jianshu.com/p/80dba5583b9e "原理扩展")
 
