--- a/文档/项目问题经验总结.md
+++ b/文档/项目问题经验总结.md
@@ -3,3 +3,6 @@
 原理：在web.xml中各个元素的执行顺序是这样的，context-param-->listener-->filter-->servlet； 而拦截器是在Spring MVC中配置的，如果从整个项目中看，一个servlet请求的执行过程就变成了这样context-param-->listener-->filter-->servlet-->interceptor(指的是拦截器)，为什么拦截器是在servlet执行之后，因为拦截器本身就是在servlet内部的。https://www.cnblogs.com/hafiz/p/5715349.html
 <br/>
 解决办法：https://www.cnblogs.com/smallSevens/p/10386030.html
+
+#### spring里【集合类型属性】的注入 ####
+[https://www.jianshu.com/p/80dba5583b9e](https://www.jianshu.com/p/80dba5583b9e "spring里【集合类型属性】的注入")
